[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indiweb"
dynamic = ["version"]
description = "A simple web application to manage INDI server"
readme = "README.md"
license = "LGPL-2.0"
authors = [
    { name = "Jasem Mutlaq", email = "mutlaqja@ikarustech.com" },
    { name = "Juan Menendez", email = "juanmb@gmail.com" },
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "bottle",
    "psutil",
    "requests",
    "importlib-metadata",
]

[project.scripts]
indi-web = "indiweb.main:main"

[project.urls]
Homepage = "http://www.indilib.org/"

[tool.hatch.version]
path = "indiweb/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/indiweb",
]
